Bug 1831148: Increase clamping range for `TransformGfxRectToAncestor`. r=emilio

The clamping is overaly pessimistic because the returned `Rect` is still
float-based, and the call site does its own clamping to `nscoord`.
Clamping to float's numeric limit causes significant floating point errors
when clipping the transformed rect, resulting in incorrect transforms.

Differential Revision: https://phabricator.services.mozilla.com/D178081